fixed person chat visibility

--- a/src/ChatPage/ChatPage.css
+++ b/src/ChatPage/ChatPage.css
@@ -5,3 +5,6 @@
   height: 65%;
   overflow: auto;
 }
+.chat-page-component{
+  height: 85%;
+}
