--- a/src/ChatPage/ChatWallComponent/ChatWallComponent.css
+++ b/src/ChatPage/ChatWallComponent/ChatWallComponent.css
@@ -1,24 +1,21 @@
-
-.Chat-Wall-Component{
+.Chat-Wall-Component {
   display: flex;
   flex-direction: column;
-  height: 100%;
   margin: 15px 0 15px 0;
 }
 .chat-component-container {
-  display: block;
+  display: flex;
   flex-direction: column;
   padding: 10px;
   width: 85%;
   margin: 10px auto;
   border-radius: 10px;
   box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.637);
-  height: 100%;
 }
-.chat-header{
+.chat-header {
+
   border-bottom: 1px solid rgba(154, 154, 154, 0.447);
   padding-bottom: 5px;
-
 }
 .chat-header-top {
   margin-top: 0;
@@ -33,16 +30,15 @@
 #chat-user-icons {
   width: 7%;
 }
-.chat-main{
+.chat-main {
   display: flex;
   flex-direction: column;
   min-height: 150px;
   width: 100%;
   margin-top: 10px;
   margin-bottom: 10px;
-
 }
-.chat-footer{
+.chat-footer {
   display: flex;
   justify-content: space-between;
   margin-bottom: 2px;
@@ -50,28 +46,27 @@
 #chat-heart-icon,
 #chat-thumbs-up-icon,
 #chat-comment-icon,
-#chat-dots-icon{
+#chat-dots-icon {
   margin-right: 20px;
 }
-.chat-input-container{
-border-top: 1px solid rgba(154, 154, 154, 0.447);
-padding-top: 5px;
-width: 100%;
-display: flex;
-justify-content: space-between;
+.chat-input-container {
+  border-top: 1px solid rgba(154, 154, 154, 0.447);
+  padding-top: 5px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
-.chat-input-option{
+.chat-input-option {
   width: 10%;
-
 }
-#chat-camera-icon{
+#chat-camera-icon {
   height: 90%;
 }
-.chat-input-text{
+.chat-input-text {
   border-radius: 25px;
-width: 90%;
+  width: 90%;
 }
-.chat-input-text:hover{
+.chat-input-text:hover {
   background-color: rgb(240, 240, 240);
   transition: 500ms;
 }
