--- a/src/ComponentChatBubble/ComponentChatBubble.css
+++ b/src/ComponentChatBubble/ComponentChatBubble.css
@@ -1,8 +1,9 @@
 .Chat-Bubble-Component {
   display: flex;
   flex-direction: column;
-  min-height: 100px;
-  height: max-content;
+  
+  /* min-height: 100px; */
+  /* height: max-content; */
 }
 .chat-single-rt, .chat-single-lf{
   display: flex;
