--- a/src/Register/Register.css
+++ b/src/Register/Register.css
@@ -144,7 +144,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 60%;
+  width: 50%;
   margin: 0 auto;
   background-color: #3645e9;
   font-size: 1.2em;
